# Krypton.SchoolsNsw.Agents

./: .gitignore  install.sh
core-app/: pyproject.toml  requirements.txt
core-app/src/: config.py  main.py
core-app/src/context/: __init__.py  dbcontext.py
core-app/src/managers/: tools_manager.py
core-app/src/server/: db_server.py  health_check.py
core-lib/: pyproject.toml  requirements.txt
core-lib/src/common/: __init__.py  base_tool_handler.py
core-lib/src/data/: schools-repository.py
core-lib/src/provider/: __init__.py  config.yaml  logfilter.py  logprovider.py
core-lib/src/server_farm/graph_db/: __init__.py  dbresources.py  dbtools.py
